// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays loading if we are fetching the timepoints 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-route-ladder__close"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__close-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  loading...
</div>
`;

exports[`renders a route ladder 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-route-ladder__close"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__close-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <ol
    className="m-route-ladder__timepoints"
  >
    <li
      className="m-route-ladder__timepoint"
    >
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
      <div
        className="m-route-ladder__timepoint-name"
      >
        MATPN
      </div>
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
    </li>
    <li
      className="m-route-ladder__timepoint"
    >
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
      <div
        className="m-route-ladder__timepoint-name"
      >
        WELLH
      </div>
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
    </li>
    <li
      className="m-route-ladder__timepoint"
    >
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
      <div
        className="m-route-ladder__timepoint-name"
      >
        MORTN
      </div>
      <div
        className="m-route-ladder__stop"
      >
        <svg
          height="60"
          width="20"
        >
          <line
            x1="10"
            x2="10"
            y1="3"
            y2="60"
          />
          <circle
            cx="10"
            cy="3"
            r="3"
          />
        </svg>
      </div>
    </li>
  </ol>
</div>
`;
